--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "express-jwt": "5.3.3",
     "graphql": "^15.5.1",
     "jsonwebtoken": "8.5.1",
+    "mongoose": "^5.13.3",
     "notarealdb": "0.2.2"
   },
   "devDependencies": {
