--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,13 @@
     "build": "react-scripts build"
   },
   "dependencies": {
-    "apollo-boost": "^0.4.9",
+    "@apollo/client": "^3.3.21",
     "bulma": "0.9.2",
     "graphql": "^15.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-router-dom": "5.2.0"
+    "react-router-dom": "5.2.0",
+    "subscriptions-transport-ws": "^0.9.19"
   },
   "devDependencies": {
     "react-scripts": "4.0.3"
