--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,7 @@
     "graphql": "^15.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-router-dom": "5.2.0",
-    "subscriptions-transport-ws": "^0.9.19"
+    "react-router-dom": "5.2.0"
   },
   "devDependencies": {
     "react-scripts": "4.0.3"
