--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.21",
     "bulma": "0.9.2",
+    "dotenv": "^10.0.0",
     "graphql": "^15.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
